# canvas-scraper-2

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/canvas_scraper/: __init__.py  __main__.py  cli.py  config.py
src/canvas_scraper/api/: __init__.py  client.py  rate_limiter.py
src/canvas_scraper/generators/: __init__.py  pdf_generator.py
src/canvas_scraper/generators/templates/: module.html  styles.css
src/canvas_scraper/models/: __init__.py  content.py
src/canvas_scraper/processors/: __init__.py  html_processor.py  image_processor.py
src/canvas_scraper/scrapers/: __init__.py  file_scraper.py  module_scraper.py  page_scraper.py
